@@ -1,12 +1,12 @@
-## 
+##
 ## This is the file `numtheory.test',
 ## generated with the SAK utility
 ## (sak docstrip/regen).
-## 
+##
 ## The original source files were:
-## 
+##
 ## numtheory.dtx  (with options: `test test_common')
-## 
+##
 ## In other words:
 ## **************************************
 ## * This Source is not the True Source *
@@ -23,6 +23,12 @@ testsNeedTcltest 2.1
 testing {
     useLocal numtheory.tcl math::numtheory
 }
+
+proc compareRounded {expected actual} {
+    return [expr {int($expected-$actual) == 0} ]
+}
+
+::tcltest::customMatch rounded compareRounded
 
 test prime_trialdivision-1 "Trial division of 1" -body {
    ::math::numtheory::prime_trialdivision 1
@@ -207,7 +213,28 @@ test isprime-2.0 "PRNG tweak" -setup {
       rename _orig_Miller--Rabin Miller--Rabin
    }
 }
+
+test numberPrimes-1.0 "Number of primes below 100" -match rounded -body {
+   set result [::math::numtheory::numberPrimesLegendre 100]
+} -result 28
+
+test numberPrimes-1.1 "Number of primes below 100 (modified)" -match rounded -body {
+   set result [::math::numtheory::numberPrimesLegendreModified 100]
+} -result 28
+
+test numberPrimes-1.2 "Number of primes below 0 (modified)" -body {
+   set result [::math::numtheory::numberPrimesLegendreModified 0]
+} -result "The limit must be larger than 1" -returnCodes 1
+
+test numberPrimes-1.3 "Number of primes between 100 and 200" -match rounded -body {
+   set result [::math::numtheory::differenceNumberPrimesLegendreModified 100 200]
+} -result 19
+
+test numberPrimes-1.4 "Number of primes between 100 and 0 - error expected" -body {
+   set result [::math::numtheory::differenceNumberPrimesLegendreModified 100 0]
+} -result "The upper limit must be larger than 1" -returnCodes 1
+
 testsuiteCleanup
-## 
-## 
+##
+##
 ## End of file `numtheory.test'.
